Modified the styles.css file

--- a/Terraform/Automating Jenkins installation on EC2/webpages/style.css
+++ b/Terraform/Automating Jenkins installation on EC2/webpages/style.css
@@ -41,7 +41,7 @@ header h1 {
     background-size: cover;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: justify;
     align-items: center;
     color: white;
     text-align: center;
